# rust-japan-address-parser-api

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  prometheus.yaml
.github/workflows/: ci.yaml  docker.yaml
src/: main.rs
