[package]
name = "rust-japan-address-parser-api"
version = "1.0.0"
edition = "2021"
authors = ["Framjet <team@framjet.com>"]
license = "MIT"
description = "High-performance REST API for parsing Japanese addresses"
homepage = "https://github.com/framjet/rust-japanese-address-parser-api"
repository = "https://github.com/framjet/rust-japanese-address-parser-api"
keywords = ["japanese", "address", "parser", "api", "rest"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Japanese address parsing
japanese-address-parser = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size